Fix login functionality and improve data sync debugging
- Fixed login.html to use APIService instead of direct fetch calls
- Fixed clearLocalAppData() method - replaced incorrect window.Storage.set() with localStorage.setItem()
- Added comprehensive debugging logs for authentication and sync process
- Enhanced error handling in login method to prevent sync failures from breaking login
- Updated DOM initialization with better auth/API availability checks
- Added graceful fallback when sync operations fail during login

This resolves the issue where users couldn't log in due to Storage API errors.

--- a/GainsGainsGains/login.html
+++ b/GainsGainsGains/login.html
@@ -362,26 +362,15 @@
             clearMessage();
 
             try {
-                const endpoint = authMode === 'login' ? 'login' : 'register';
-                const body = authMode === 'login' 
-                    ? { email, password }
-                    : { email, password, name };
+                let result;
+                
+                if (authMode === 'login') {
+                    result = await window.api.login(email, password);
+                } else {
+                    result = await window.api.register(email, password, name);
+                }
 
-                const response = await fetch(`http://localhost:3000/api/auth/${endpoint}`, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify(body)
-                });
-
-                const data = await response.json();
-
-                if (response.ok) {
-                    // Store auth data
-                    localStorage.setItem('auth_token', data.token);
-                    localStorage.setItem('user_data', JSON.stringify(data.user));
-                    
+                if (result.success) {
                     showMessage(
                         authMode === 'login' ? 'Login successful! Redirecting...' : 'Account created! Redirecting...', 
                         'success'
@@ -392,7 +381,7 @@
                         window.location.href = 'index.html';
                     }, 1500);
                 } else {
-                    showMessage(data.error || 'Authentication failed', 'error');
+                    showMessage(result.error || 'Authentication failed', 'error');
                 }
             } catch (error) {
                 console.error('Auth error:', error);
