--- a/GainsGainsGains/login.html
+++ b/GainsGainsGains/login.html
@@ -233,12 +233,21 @@
     </div>
 
     <!-- Load scripts -->
+    <script src="config.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/data.js"></script>
     <script src="js/api.js"></script>
 
     <script>
         let authMode = 'login';
+
+        // API URL detection function  
+        function getApiUrl() {
+            if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1') {
+                return 'http://localhost:3000/api';
+            }
+            return window.GYMBRO_API_URL || `${window.location.protocol}//${window.location.hostname}/api`;
+        }
 
         // Check if user is already logged in
         document.addEventListener('DOMContentLoaded', async () => {
@@ -249,7 +258,8 @@
                 
                 // Verify token with server
                 try {
-                    const response = await fetch('http://localhost:3000/api/auth/verify', {
+                    const apiUrl = getApiUrl();
+                    const response = await fetch(`${apiUrl}/auth/verify`, {
                         headers: { 'Authorization': `Bearer ${token}` }
                     });
                     
